[gd_scene load_steps=4 format=3 uid="uid://ck8g2eqeo3k8u"]

[ext_resource type="Script" path="res://entities/unit/Unit.gd" id="1_5noar"]
[ext_resource type="Texture2D" uid="uid://fy3oixls6doq" path="res://assets/unit_gfx/unit_sprites.png" id="1_r0pkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v31ln"]
radius = 20.0

[node name="Unit" type="Area2D"]
z_index = 3
z_as_relative = false
script = ExtResource("1_5noar")

[node name="UnitSprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_r0pkk")
region_enabled = true
region_rect = Rect2(44, 228, 128, 120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v31ln")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
